--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body id="up">
+    <!-- Import edilmesi gerekilen blocklar ayrica 'portfolioscript.js ve jQueryCompressed.js' stil olarak da 'style.min.css', iconlar icin (button) 'img' dosyasi da lazimdir -->
     <div class="block_wrapper">
         <div id="nonHidden" class="nonHidden">
             <img src="img/arrows/arrow-left-solid.svg" alt="nextIcon" class="arrowHidden">
@@ -32,6 +33,7 @@
     </div>
     <script src="js/jQueryCompressed.js"></script>
     <script src="js/portfolioscript.js"></script>
+    <!-- Import edilmesi gerekilen blocklar ^^^^ -->
 </body>
 
 </html>
