--- a/src/index.html
+++ b/src/index.html
@@ -16,17 +16,21 @@
         </div>
         <div class="portfolio">
             <div class="portfolio__button">
-                <div class="portfolio_buttons">
-                    <img src="img/arrows/up.svg" alt="prewIcon" class="prew">
-                </div>
+                <a id="prew" href="#" target="_blank">
+                    <div class="portfolio_buttons">
+                        <img id="prew" src="img/arrows/up.svg" alt="prewIcon" class="prew">
+                    </div>
+                </a>
                 <a href="#up">
                     <div class="portfolio_buttons">
                         <img id="up" src="img/arrows/arrow-alt-circle-up-regular.svg" alt="upIcon" class="up">
                     </div>
                 </a>
-                <div id="next" class="portfolio_buttons">
-                    <img src="img/arrows/up.svg" alt="nextIcon" class="next">
-                </div>
+                <a id="next" href="#" target="_blank">
+                    <div class="portfolio_buttons">
+                        <img id="next" src="img/arrows/up.svg" alt="nextIcon" class="next">
+                    </div>
+                </a>
             </div>
             <div id="tag_title" class="portfolio__title"></div>
         </div>
